force-app/main/default/objects/Booking__c/fields/Account_Number_Service_tax__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Service_tax__c</fullName>
    <label>Account Number(ST)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>