force-app/main/default/objects/Booking__c/fields/Actual_Brokerage_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Brokerage_Value__c</fullName>
    <formula>Base_Brokerage_Amount__c  - Passback_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Brokerage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>