force-app/main/default/objects/Booking__c/fields/Actual_Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Referral_Amount__c</fullName>
    <formula>Referral_Benefit_Amount__c - Referral_Passback_Amount__c</formula>
    <label>Actual Referral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>