force-app/main/default/objects/Booking__c/fields/Additional_Brokerage_Accrued_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Additional_Brokerage_Accrued_Dashboards__c</fullName>
    <label>Additional Brokerage Accrued(Dashboards)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>