force-app/main/default/objects/Booking__c/fields/ADF_Balance__c.field-meta.xml
<CustomField>
    <fullName>ADF_Balance__c</fullName>
    <label>Balance ADF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>