force-app/main/default/objects/Booking__c/fields/ADF_Deposite__c.field-meta.xml
<CustomField>
    <fullName>ADF_Deposite__c</fullName>
    <label>ADF Deposite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>