force-app/main/default/objects/Booking__c/fields/ADF_Interest_Amount_Payable1__c.field-meta.xml
<CustomField>
    <fullName>ADF_Interest_Amount_Payable1__c</fullName>
    <label>ADF Interest Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>