force-app/main/default/objects/Booking__c/fields/ADF_Interest_Paid__c.field-meta.xml
<CustomField>
    <fullName>ADF_Interest_Paid__c</fullName>
    <label>Total ADF Interest Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>