force-app/main/default/objects/Booking__c/fields/ADF_Interest_Payable__c.field-meta.xml
<CustomField>
    <fullName>ADF_Interest_Payable__c</fullName>
    <label>ADF Interest Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>