force-app/main/default/objects/Booking__c/fields/ADF_Opted__c.field-meta.xml
<CustomField>
    <fullName>ADF_Opted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADF Opted</label>
    <type>Checkbox</type>
</CustomField>