force-app/main/default/objects/Booking__c/fields/Advance_registration__c.field-meta.xml
<CustomField>
    <fullName>Advance_registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance registration</label>
    <type>Checkbox</type>
</CustomField>