force-app/main/default/objects/Booking__c/fields/Advance_Registration_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_Registration_Reference_No__c</fullName>
    <label>Del_Advance Registration Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>