force-app/main/default/objects/Booking__c/fields/Agreement_Value_for_broker_calculation__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_for_broker_calculation__c</fullName>
    <formula>IF( Stamp_duty_Paid2__c &gt;Stamp_duty_payable_by_Runwal__c,Quotation__r.Brokerage_Agreement_Value__c-(Stamp_duty_Paid2__c -Stamp_duty_payable_by_Runwal__c),Quotation__r.Brokerage_Agreement_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value for broker calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>