force-app/main/default/objects/Booking__c/fields/Agreement_Value_for_brokers__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_for_brokers__c</fullName>
    <formula>IF(ISPICKVAL(Source_of_Booking__c, &apos;Channel Partner&apos;),IF(AND(Old_Booking__c != null,ISPICKVAL(Unit_Trasfer_to_Project__c , &apos;Same Project&apos;),NOT(ISPICKVAL(Unit_Trasfer_to_Project__c , &apos;Different Project&apos;)),NOT(ISPICKVAL(Unit_Trasfer_to_Project__c , &apos;&apos;))   ), IF(Old_Booking__r.Agreement_Value_for_broker_calculation__c &lt; Agreement_Value_for_broker_calculation__c , Old_Booking__r.Agreement_Value_for_broker_calculation__c, Agreement_Value_for_broker_calculation__c)  ,
			Agreement_Value_for_broker_calculation__c),0)</formula>
    <label>Agreement Value for brokers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>