force-app/main/default/objects/Booking__c/fields/Allotment_Premium__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Premium__c</fullName>
    <description>Allotment Premium (Agreement Value)</description>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>