force-app/main/default/objects/Booking__c/fields/AOP_Mandate__c.field-meta.xml
<CustomField>
    <fullName>AOP_Mandate__c</fullName>
    <label>AOP Mandate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>