force-app/main/default/objects/Booking__c/fields/AOP_Scheme__c.field-meta.xml
<CustomField>
    <fullName>AOP_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOP Scheme</label>
    <referenceTo>AOP__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>