force-app/main/default/objects/Booking__c/fields/Application_Form_No__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_No__c</fullName>
    <label>Application Form No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>