force-app/main/default/objects/Booking__c/fields/Applied_Slab_Name__c.field-meta.xml
<CustomField>
    <fullName>Applied_Slab_Name__c</fullName>
    <formula>Brokerage_Summary__r.Applied_Slab_Name__c</formula>
    <label>Applied Slab Name</label>
    <type>Text</type>
</CustomField>