force-app/main/default/objects/Booking__c/fields/AV_for_broker_calculation_new__c.field-meta.xml
<CustomField>
    <fullName>AV_for_broker_calculation_new__c</fullName>
    <label>Agreement Value for broker calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>