force-app/main/default/objects/Booking__c/fields/Balance_principal_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_principal_to_be_paid__c</fullName>
    <formula>Allotment_Premium__c - RW_Total_Amount_Received_Without_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance principal to be paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>