force-app/main/default/objects/Booking__c/fields/Bank_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Loan_Status__c</fullName>
    <label>Bank Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Funding_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Need help to apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>