force-app/main/default/objects/Booking__c/fields/Bare_Shell__c.field-meta.xml
<CustomField>
    <fullName>Bare_Shell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bare Shell</label>
    <type>Checkbox</type>
</CustomField>