force-app/main/default/objects/Booking__c/fields/Base_Brokerage_Accrued_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Base_Brokerage_Accrued_Dashboards__c</fullName>
    <label>Base Brokerage Accrued (Dashboards)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>