force-app/main/default/objects/Booking__c/fields/Base_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Brokerage_Amount__c</fullName>
    <formula>( Base_Brokerage_2__c * Agreement_Value_for_brokers__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>