force-app/main/default/objects/Booking__c/fields/Basic_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_Booking_Amount__c</fullName>
    <label>Basic Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>