force-app/main/default/objects/Booking__c/fields/Booking_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Id__c</fullName>
    <label>Booking Form Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>