force-app/main/default/objects/Booking__c/fields/Booking_Source_CP_New__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source_CP_New__c</fullName>
    <formula>IF( ISBLANK(  Customer__r.Walk_in_Channel_Partner_Name__c ) , &quot;N/A&quot;, &quot;Name - &quot;+  Customer__r.Walk_in_Channel_Partner_Name__c +&quot; | Contact - &quot;+  Customer__r.Walk_in_Channel_Partner_Phone__c +&quot; | Email - &quot;+  Customer__r.Walk_in_Channel_Partner_Email__c )</formula>
    <label>Booking Source (CP New)</label>
    <type>Text</type>
</CustomField>