force-app/main/default/objects/Booking__c/fields/Booking_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source_Details__c</fullName>
    <label>Booking Source Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>