force-app/main/default/objects/Booking__c/fields/Booking_Source_Reference_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source_Reference_by_Customer__c</fullName>
    <formula>IF(ISBLANK(Customer__r.Walk_in_Respective_Customer_Account__c) , &quot;N/A&quot;, &quot;Customer Name - &quot;+ 
TEXT(Customer__r.Walk_in_Respective_Customer_Account__r.Salutation)+
Customer__r.Walk_in_Respective_Customer_Account__r.FirstName + &quot; &quot;+
Customer__r.Walk_in_Respective_Customer_Account__r.LastName)</formula>
    <label>Booking Source (Reference by Customer)</label>
    <type>Text</type>
</CustomField>