force-app/main/default/objects/Booking__c/fields/Booking_Source_Reference_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source_Reference_By_Employee__c</fullName>
    <formula>IF( ISBLANK(Customer__r.Walk_in_Employee_Name__c) , &quot;N/A&quot;, &quot;Name - &quot;+Customer__r.Walk_in_Employee_Name__c+&quot; | Id - &quot;+Customer__r.Walk_in_Employee_Id__c)</formula>
    <label>Booking Source (Reference By Employee)</label>
    <type>Text</type>
</CustomField>