force-app/main/default/objects/Booking__c/fields/Booking_Terms_and_Conditions_2__c.field-meta.xml
<CustomField>
    <fullName>Booking_Terms_and_Conditions_2__c</fullName>
    <label>Booking Terms and Conditions 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>