force-app/main/default/objects/Booking__c/fields/BookingNo__c.field-meta.xml
<CustomField>
    <fullName>BookingNo__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>BookingNo</label>
    <type>AutoNumber</type>
</CustomField>