force-app/main/default/objects/Booking__c/fields/Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>Broker_Code__c</fullName>
    <label>Channel Partner Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>