force-app/main/default/objects/Booking__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Channel Partner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>