force-app/main/default/objects/Booking__c/fields/Brokerage1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage1_Amount__c</fullName>
    <formula>(Brokerage__c * Agreement_Value_for_brokers__c)+Dif_Br__c</formula>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>