force-app/main/default/objects/Booking__c/fields/Brokerage_Paid__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Paid__c</fullName>
    <label>Brokerage Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>