force-app/main/default/objects/Booking__c/fields/Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage Scheme</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please ensure the approved brokerage scheme is tagged appropriately</errorMessage>
        <filterItems>
            <field>Brokerage_Scheme__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Level 2</value>
        </filterItems>
        <filterItems>
            <field>$User.Username</field>
            <operation>equals</operation>
            <value>stetig.admin@runwal.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Brokerage_Scheme__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>