force-app/main/default/objects/Booking__c/fields/Brokerage_Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme_Name__c</fullName>
    <label>Brokerage Scheme Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>