force-app/main/default/objects/Booking__c/fields/Brokerage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage Summary</label>
    <referenceTo>Brokerage_Summary__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>