force-app/main/default/objects/Booking__c/fields/BrokerIId__c.field-meta.xml
<CustomField>
    <fullName>BrokerIId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Id</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
        <filterItems>
            <field>Broker__c.Deactivated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.Source_of_Booking__c</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>Broker__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>$Source.Source_of_Booking__c</field>
            <operation>equals</operation>
            <value>Temp Channel Partner</value>
        </filterItems>
        <filterItems>
            <field>Broker__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Temp Channel Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>Booking20</relationshipLabel>
    <relationshipName>Booking20</relationshipName>
    <type>Lookup</type>
</CustomField>