force-app/main/default/objects/Booking__c/fields/Cal_Brk__c.field-meta.xml
<CustomField>
    <fullName>Cal_Brk__c</fullName>
    <formula>Brokerage__c * Agreement_Value_for_brokers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>