force-app/main/default/objects/Booking__c/fields/Calculate_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Brokerage</label>
    <type>Checkbox</type>
</CustomField>