force-app/main/default/objects/Booking__c/fields/Calculated_Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Referral_Amount__c</fullName>
    <formula>Referral__c * Allotment_Premium__c</formula>
    <label>Calculated Referral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>