force-app/main/default/objects/Booking__c/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Welcome call accepted</fullName>
            </value>
            <value>
                <fullName>Welcome call rejected</fullName>
            </value>
            <value>
                <fullName>Wrong number/No Number</fullName>
            </value>
            <value>
                <fullName>Ringing/Switched Off/Not reachable</fullName>
            </value>
            <value>
                <fullName>Call back request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>