force-app/main/default/objects/Booking__c/fields/Cancellation_approved_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_approved_date__c</fullName>
    <label>Cancellation approved date</label>
    <type>Date</type>
</CustomField>