force-app/main/default/objects/Booking__c/fields/Cancellation_Checklist_Document__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Checklist_Document__c</fullName>
    <label>Cancellation Checklist Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>