force-app/main/default/objects/Booking__c/fields/Cancellation_Checklist_Link__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Checklist_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  Cancellation_Checklist_Document__c  , &quot;Cancellation checklist&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Checklist Link</label>
    <type>Text</type>
</CustomField>