force-app/main/default/objects/Booking__c/fields/Cancellation_Deed_Document__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deed_Document__c</fullName>
    <label>Cancellation Deed Document</label>
    <length>100</length>
    <type>Text</type>
</CustomField>