force-app/main/default/objects/Booking__c/fields/Cancellation_Deed_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deed_Document_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  Cancellation_Deed_Document__c  , &quot;Cancellation Deed Document&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Deed Document Link</label>
    <type>Text</type>
</CustomField>