force-app/main/default/objects/Booking__c/fields/Cancellation_Deed_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deed_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Deed Uploaded</label>
    <type>Checkbox</type>
</CustomField>