force-app/main/default/objects/Booking__c/fields/Cancellation_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_in_SAP__c</fullName>
    <label>Cancellation in SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to SAP</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>