force-app/main/default/objects/Booking__c/fields/Cancellation_initiation_date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_initiation_date__c</fullName>
    <label>Cancellation initiation date</label>
    <type>Date</type>
</CustomField>