force-app/main/default/objects/Booking__c/fields/Cancellation_Letter_Link__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Letter_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+  Cancellation_Letter_Document__c  , &quot;Cancellation Letter&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Letter Link</label>
    <type>Text</type>
</CustomField>