force-app/main/default/objects/Booking__c/fields/Cancellation_Letter_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Letter_Upload_Date__c</fullName>
    <label>Cancellation Letter Upload Date</label>
    <type>Date</type>
</CustomField>