force-app/main/default/objects/Booking__c/fields/Cancellation_Sub_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Sub_reason__c</fullName>
    <label>Cancellation Sub reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancellation_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z6</fullName>
                <label>Cancer Patient</label>
            </value>
            <value>
                <fullName>R6</fullName>
                <label>Change of Mind</label>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
                <label>Demise of the Main Applicant</label>
            </value>
            <value>
                <fullName>R2</fullName>
                <label>Dispute over Agreement Clauses</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>Financial Crisis</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <label>Legal Issue</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <label>Loss of Job</label>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Medical Emergencies</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>Non Approval -Building Construction Plan</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Non Approval of Bank Loan - Eligibility</label>
            </value>
            <value>
                <fullName>Non Contactable</fullName>
            </value>
            <value>
                <fullName>R8</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Personal Exigencies</label>
            </value>
            <value>
                <fullName>R7</fullName>
                <label>Policy Driven Canc- Payment Defaulter</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>Unit Transfer</label>
            </value>
            <value>
                <fullName>R4</fullName>
                <label>Unsuitable Possession Date</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>Upgrade</label>
            </value>
            <value>
                <fullName>R5</fullName>
                <label>Vastu Compliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>