force-app/main/default/objects/Booking__c/fields/Cancellation_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Subtype__c</fullName>
    <label>Cancellation Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Involuntary</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Movement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>