force-app/main/default/objects/Booking__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingTE3l</relationshipName>
    <type>Lookup</type>
</CustomField>