force-app/main/default/objects/Booking__c/fields/Checklist_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Approval_Date_Time__c</fullName>
    <label>Checklist Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>