force-app/main/default/objects/Booking__c/fields/Checklist_Approved__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Approved</label>
    <type>Checkbox</type>
</CustomField>