force-app/main/default/objects/Booking__c/fields/Checklist_download_date__c.field-meta.xml
<CustomField>
    <fullName>Checklist_download_date__c</fullName>
    <label>Checklist download date</label>
    <type>Date</type>
</CustomField>